# earthbound

./: .gitignore  CLAUDE.md  Makefile  README.md  commondefs.yml  earthbound-1995-03-27.yml  earthbound.yml  mother2.yml  pyproject.toml
asm/audio/: apply_next_map_music.asm  change_music.asm  get_map_music_at_leader.asm  initialize_music_subsystem.asm  load_spc700_data.asm  play_sound.asm  play_sound_and_update_meters.asm  resolve_map_sector_music.asm  stop_music.asm  update_map_music_at_leader.asm
asm/battle/: 25_percent_variance.asm  50_percent_variance.asm  apply_action_to_targets.asm  apply_condiment.asm  apply_neutralize_to_all.asm  apply_psi_battle_effect.asm  autohealing.asm  autolifeup.asm  battle_psi_menu.asm  build_letterbox_hdma_table.asm  calc_damage.asm  calc_damage_reduction.asm  calc_psi_damage_modifiers.asm  calc_psi_resistance_modifiers.asm  calc_resistances.asm  calculate_battler_row_width.asm  call_for_help_common.asm  check_all_hppp_meters_stable.asm  check_battle_target_type.asm  check_character_in_party.asm  check_dead_players.asm  check_sector_uses_minisprites.asm  choose_target.asm  clamp_enemies_to_screen_width.asm  cleanup_window_tiles.asm  clear_battler_flashing.asm  clear_hppp_window_header.asm  close_oval_window.asm  consume_used_battle_item.asm  copy_tilemap_rows_to_vram.asm  count_alive_party_members.asm  count_chars.asm  decrease_defense_16th.asm  decrease_offense_16th.asm  determine_dodge.asm  determine_targetting.asm  display_battle_cutscene_text.asm  draw_active_hppp_windows.asm  draw_and_mark_hppp_window.asm  eat_food.asm  (+122 more)
asm/data/: C08C58_jumps.asm  items.asm  screen_transition_config_table.asm  sound_stone_idle_sprite_palettes.asm  sound_stone_idle_sprite_tiles.asm  sound_stone_melody_durations.asm  sound_stone_melody_durations_2.asm  sound_stone_note_x_positions.asm  sound_stone_note_y_positions.asm  sound_stone_orbit_sprite_palettes.asm  sound_stone_orbit_sprite_tiles.asm  sprite_grouping_data.asm  stat_gain_modifier_table.asm  status_window_text.asm
asm/ending/: change_vwf_2bpp_to_3_colour.asm  check_cast_scroll_threshold.asm  copy_cast_name_tilemap-jp.asm  copy_cast_name_tilemap.asm  credits_scroll_frame-jp.asm  credits_scroll_frame-proto.asm  credits_scroll_frame.asm  handle_cast_scrolling.asm  initialize_credits_scene.asm  is_entity_still_on_cast_screen.asm  load_cast_scene-jp.asm  load_cast_scene-proto.asm  load_cast_scene.asm  play_cast_scene.asm  play_credits.asm  prepare_cast_name_tilemap-jp.asm  prepare_cast_name_tilemap.asm  prepare_dynamic_cast_name_text.asm  print_cast_name-jp.asm  print_cast_name_entity_var0.asm  print_cast_name_party.asm  render_cast_name_text-proto.asm  render_cast_name_text.asm  slide_credits_photograph.asm  try_rendering_photograph.asm
asm/intro/: clear_demo_recording_flags.asm  clear_demo_timer.asm  decomp_itoi_production.asm  decomp_nintendo_presentation.asm  decompress_title_data.asm  display_animated_naming_sprite.asm  draw_title_letter.asm  file_select_menu-jp.asm  file_select_menu.asm  file_select_menu_loop-jp.asm  file_select_menu_loop.asm  gas_station.asm  gas_station_load.asm  init_intro.asm  init_naming_screen_events.asm  load_gas_station_flash_palette.asm  load_gas_station_palette.asm  load_title_screen_graphics-jp.asm  load_title_screen_graphics.asm  load_title_screen_palette.asm  logo_screen.asm  logo_screen_load.asm  name_a_character.asm  record_demo_input.asm  render_character_name_display.asm  render_party_member_name-jp.asm  render_party_member_name-proto.asm  render_party_member_name.asm  run_title_sequence.asm  show_title_screen-jp.asm  show_title_screen-proto.asm  show_title_screen.asm  start_demo_playback.asm  start_demo_playback_far.asm  start_demo_recording.asm
docs/: assembly-to-c.md  assets.md  editing-sprites.md  modding.md  porting-guide.md
ebtools/: __init__.py  __main__.py  byte_reader.py  config.py  rom.py  state_dump.py  state_dump_annotations.py
include/: config.asm  enums.asm  eventmacros.asm  structs.asm  textmacros.asm
port/unix/: CMakeLists.txt  main.c
port/unix/platform/: sdl2_audio.c  sdl2_debug.c  sdl2_input.c  sdl2_save.c  sdl2_timer.c  sdl2_video.c
port/waveshare/pico-lcd-1.3/: CMakeLists.txt  README.md  board.h  main.c
port/waveshare/pico-lcd-1.3/platform/: pico_audio.c  pico_debug.c  pico_input.c  pico_save.c  pico_timer.c  pico_video.c  pico_worker.c
src/: CMakeLists.txt  PROGRESS.md  game_main.c  game_main.h
src/core/: decomp.c  decomp.h  log.h  math.c  math.h  memory.c  memory.h  state_dump.c  state_dump.h  types.h
src/data/: assets.c  assets.h  battle_text_data.h  event_script_data.c  event_script_data.h  text_refs.h
src/entity/: buffer_layout.h  callbacks.c  callroutine.c  callroutine_action.c  callroutine_internal.h  callroutine_movement.c  callroutine_palette.c  callroutine_screen.c  callroutine_sprite.c  entity.c  entity.h  opcodes.c  pathfinding.c  pathfinding.h  script.c  script.h  sprite.c  sprite.h
src/game/: audio.c  audio.h  battle.c  battle.h  battle_actions.c  battle_bg.c  battle_bg.h  battle_calc.c  battle_internal.h  battle_psi.c  battle_targeting.c  battle_ui.c  display_text.c  display_text.h  display_text_cc.c  display_text_internal.h  display_text_menus.c  door.c  door.h  ending.c  ending.h  fade.c  fade.h  flyover.c  flyover.h  game_state.c  game_state.h  inventory.c  inventory.h  map_loader.c  map_loader.h  oval_window.c  oval_window.h  overworld.c  overworld.h  overworld_collision.c  overworld_interaction.c  overworld_internal.h  overworld_palette.c  overworld_spawn.c  (+9 more)
src/include/: binary.h  constants.h  pad.h
src/intro/: attract_mode.c  attract_mode.h  file_select.c  file_select.h  gas_station.c  gas_station.h  init_intro.c  init_intro.h  logo_screen.c  logo_screen.h  title_screen.c  title_screen.h
src/platform/: platform.h  platform_render.c
src/snes/: dma.c  dma.h  ppu.c  ppu.h  ppu_render.c
src/tools/: gen_struct_info.c
src/verify/: verify.c  verify.h
tests/: test_battle_sprites.py  test_coverage.py  test_hallz.py  test_migrate_text.py  test_overworld_sprites.py  test_text_dsl.py  test_tiles.py
(+2738 files in other folders)
